modification des parametres et IHM photos

--- a/templates/param.html
+++ b/templates/param.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-
+<div class="w3-container w3-teal">
+<h1>
+    <a href="http://localhost:5001" class="w3-button">Gestions des caméras</a>
+</h1>
+</div>
 <form class="w3-container" action="/param" method="POST">
     <b>
     <label class="w3-text-blue">Découpe en blocs d'analyse </label>
@@ -27,6 +31,6 @@
     </b>
     <input type="submit" value="Modifier">
 </form>
-
+<a class="w3-panel w3-center" href="http://localhost:5002" class="w3-button">retour</a>
 </body>
 </html>
