--- a/templates/photo.html
+++ b/templates/photo.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
+
 <div class="w3-container w3-teal">
-  <h1>Caméras</h1>
+<h1>
+    <a href="http://localhost:5001" class="w3-button">Captures caméras</a>
+</h1>
 </div>
 
 
@@ -27,5 +30,6 @@
     </div>
     {% endfor %}
 </div>
+
 </body>
 </html>
