--- a/templates/param.html
+++ b/templates/param.html
@@ -9,7 +9,7 @@
 <body>
 <div class="w3-container w3-teal">
 <h1>
-    <a href="http://localhost:5001" class="w3-button">Gestions des caméras</a>
+    <a href="http://{{ip}}:5001" class="w3-button">Gestions des caméras</a>
 </h1>
 </div>
 <form class="w3-container" action="/param" method="POST">
@@ -31,6 +31,6 @@
     </b>
     <input type="submit" value="Modifier">
 </form>
-<a class="w3-panel w3-center" href="http://localhost:5002" class="w3-button">retour</a>
+<a class="w3-panel w3-center" href="http://{{ip}}:5002" class="w3-button">retour</a>
 </body>
 </html>
