--- a/templates/log.html
+++ b/templates/log.html
@@ -11,7 +11,7 @@
 
 <div class="w3-container w3-teal">
 <h1>
-    <a href="http://192.168.0.1:5001" class="w3-button">Captures caméras</a>
+    <a href="http://{{ip}}:5001" class="w3-button">Captures caméras</a>
 </h1>
 </div>
 
