--- a/templates/log.html
+++ b/templates/log.html
@@ -14,8 +14,8 @@
     <a href="http://{{ip}}:5001" class="w3-button">Captures caméras</a>
 </h1>
 </div>
-
+{% autoescape false %}
 {{texte}}
-
+{% endautoescape %}
 </body>
 </html>
