--- a/templates/log.html
+++ b/templates/log.html
@@ -17,5 +17,7 @@
 {% autoescape false %}
 {{texte}}
 {% endautoescape %}
+
+<a class="w3-panel w3-center" href="http://{{ip}}:5002" class="w3-button">retour</a>
 </body>
 </html>
