--- a/templates/param.html
+++ b/templates/param.html
@@ -17,8 +17,11 @@
     <label class="w3-text-blue">Découpe en blocs d'analyse </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="decoupe" name="decoupe" value={{parametres.decoupe}}>
 
-    <label class="w3-text-blue">Seuil </label>
+    <label class="w3-text-blue">Seuil de différence </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="seuil" name="seuil" value={{parametres.seuil}}>
+
+    <label class="w3-text-blue">nombre min de blocs  </label>
+    <input class="w3-input w3-border w3-hover-black" type="text" id="min_blocs" name="min_blocs" value={{parametres.min_blocs}}>
 
     <label class="w3-text-blue">HOG winStride </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="winStride" name="winStride" value={{parametres.winStride}}>
