--- a/templates/param.html
+++ b/templates/param.html
@@ -14,6 +14,9 @@
 </div>
 <form class="w3-container" action="/param" method="POST">
     <b>
+    <label class="w3-text-blue">Activation flux HD => "on" pour activer </label>
+    <input class="w3-input w3-border w3-hover-black" type="text" id="HD" name="HD" value={{parametres.HD}}>
+
     <label class="w3-text-blue">Découpe en blocs d'analyse </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="decoupe" name="decoupe" value={{parametres.decoupe}}>
 
