--- a/templates/param.html
+++ b/templates/param.html
@@ -17,13 +17,13 @@
     <label class="w3-text-blue">Activation flux HD => "on" pour activer </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="HD" name="HD" value={{parametres.HD}}>
 
-    <label class="w3-text-blue">Découpe en blocs d'analyse </label>
+    <label class="w3-text-blue">Découpe de l'image HV : nb division en blocs d'analyse </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="decoupe" name="decoupe" value={{parametres.decoupe}}>
 
-    <label class="w3-text-blue">Seuil de différence </label>
+    <label class="w3-text-blue">Seuil de différence entre 2 images successives </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="seuil" name="seuil" value={{parametres.seuil}}>
 
-    <label class="w3-text-blue">nombre min de blocs  </label>
+    <label class="w3-text-blue">nombre min de blocs différents pour déclenchement </label>
     <input class="w3-input w3-border w3-hover-black" type="text" id="min_blocs" name="min_blocs" value={{parametres.min_blocs}}>
 
     <label class="w3-text-blue">HOG winStride </label>
